crates/analyzer/tests/snapshots/analysis__return_lte_i256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/return_lte_i256.fe\", &src, module, &db)"

---
note: 
  ┌─ features/return_lte_i256.fe:2:5
  │  
2 │ ╭     pub fn bar(x: i256, y: i256) -> bool:
3 │ │         return x <= y
  │ ╰─────────────────────^ attributes hash: 211782109501053014
  │  
  = FunctionSignature {
        self_decl: None,
        params: [
            FunctionParam {
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            I256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "y",
                typ: Ok(
                    Base(
                        Numeric(
                            I256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Bool,
            ),
        ),
    }

note: 
  ┌─ features/return_lte_i256.fe:3:16
  │
3 │         return x <= y
  │                ^    ^ i256: Value => None
  │                │     
  │                i256: Value => None

note: 
  ┌─ features/return_lte_i256.fe:3:16
  │
3 │         return x <= y
  │                ^^^^^^ bool: Value => None


