crates/analyzer/tests/snapshots/analysis__return_multiplication_u256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/return_multiplication_u256.fe\", &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "x",
                                Base(
                                    Numeric(
                                        U256,
                                    ),
                                ),
                            ),
                            (
                                "y",
                                Base(
                                    Numeric(
                                        U256,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/return_multiplication_u256.fe:3:16
  │
3 │         return x * y
  │                ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_multiplication_u256.fe:3:20
  │
3 │         return x * y
  │                    ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_multiplication_u256.fe:3:16
  │
3 │         return x * y
  │                ^^^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_multiplication_u256.fe:2:5
  │  
2 │ ╭     pub def bar(x: u256, y: u256) -> u256:
3 │ │         return x * y
  │ ╰────────────────────^ attributes hash: 8134878916105233724
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "x",
                Base(
                    Numeric(
                        U256,
                    ),
                ),
            ),
            (
                "y",
                Base(
                    Numeric(
                        U256,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Numeric(
                U256,
            ),
        ),
    }

note: 
  ┌─ features/return_multiplication_u256.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar(x: u256, y: u256) -> u256:
3 │ │         return x * y
  │ ╰────────────────────^ attributes hash: 2555993484571769857
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "x",
                        Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    ),
                    (
                        "y",
                        Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    ),
                ],
                return_type: Base(
                    Numeric(
                        U256,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        structs: [],
        external_contracts: [],
    }

note: 
  ┌─ features/return_multiplication_u256.fe:2:20
  │
2 │     pub def bar(x: u256, y: u256) -> u256:
  │                    ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/return_multiplication_u256.fe:2:29
  │
2 │     pub def bar(x: u256, y: u256) -> u256:
  │                             ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/return_multiplication_u256.fe:2:38
  │
2 │     pub def bar(x: u256, y: u256) -> u256:
  │                                      ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )


