crates/analyzer/tests/snapshots/analysis__return_subtraction_i256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_subtraction_i256.fe:2:5
  │  
2 │ ╭     pub fn bar(x: i256, y: i256) -> i256 {
3 │ │         return x - y
4 │ │     }
  │ ╰─────^ params: [{ label: None, name: x, typ: i256 }, { label: None, name: y, typ: i256 }] -> i256

note: 
  ┌─ return_subtraction_i256.fe:3:16
  │
3 │         return x - y
  │                ^   ^ i256
  │                │    
  │                i256

note: 
  ┌─ return_subtraction_i256.fe:3:16
  │
3 │         return x - y
  │                ^^^^^ i256


