crates/analyzer/tests/snapshots/analysis__return_subtraction_u256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_subtraction_u256.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u256, y: u256) -> u256 {
3 │ │         return x - y
4 │ │     }
  │ ╰─────^ attributes hash: 6847926207878778580
  │  
  = FunctionSignature {
        self_decl: None,
        ctx_decl: None,
        params: [
            FunctionParam {
                label: None,
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                label: None,
                name: "y",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
  ┌─ return_subtraction_u256.fe:3:16
  │
3 │         return x - y
  │                ^   ^ u256: Value
  │                │    
  │                u256: Value

note: 
  ┌─ return_subtraction_u256.fe:3:16
  │
3 │         return x - y
  │                ^^^^^ u256: Value


