crates/analyzer/tests/snapshots/analysis__send_value.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ send_value.fe:2:5
  │  
2 │ ╭     pub fn send_them_wei(ctx: Context, to: address, wei: u256) {
3 │ │         ctx.send_value(to, wei)
4 │ │     }
  │ ╰─────^ self: None, params: [{ label: None, name: ctx, typ: Context }, { label: None, name: to, typ: address }, { label: None, name: wei, typ: u256 }] -> ()

note: 
  ┌─ send_value.fe:3:9
  │
3 │         ctx.send_value(to, wei)
  │         ^^^            ^^  ^^^ u256
  │         │              │    
  │         │              address
  │         Context

note: 
  ┌─ send_value.fe:3:9
  │
3 │         ctx.send_value(to, wei)
  │         ^^^^^^^^^^^^^^^^^^^^^^^ ()


